--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "author": "LeviOP",
     "type": "module",
+    "license": "GPL-3.0-only",
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
